--- a/src/components/carouselItem.css
+++ b/src/components/carouselItem.css
@@ -1,24 +1,25 @@
-.carousel-item {
+.item {
   border-radius: 20px;
   overflow: hidden;
   position: relative;
   display: inline-block;
   width: 200px;
   height: 250px;
-  margin-right: 10px;
   font-size: 20px;
   cursor: pointer;
   transition: 450ms all;
   -webkit-transform-origin: center left;
           transform-origin: center left;
+  margin: 40px 0;
 }
 
-.carousel-item:hover ~ .carousel-item {
+
+.item:hover ~ .item {
   -webkit-transform: translate3d(100px, 0, 0);
           transform: translate3d(100px, 0, 0);
 }
 
-.carousel-item__img {
+.item__img {
   width: 200px;
   height: 250px;
   -o-object-fit: cover;
@@ -27,18 +28,15 @@
 
 
 
-.carousel__container:hover .carousel-item {
+.carousel__container:hover .item {
   opacity: 0.3;
   z-index: 1;
 }
 
-.carousel__container:hover .carousel-item:hover {
+.carousel__container:hover .item:hover {
   -webkit-transform: scale(1.5);
           transform: scale(1.5);
   opacity: 1;
   z-index: 2;
 }
 
-.carousel::-webkit-scrollbar{
-  display: none;
-}
