--- a/src/components/header.scss
+++ b/src/components/header.scss
@@ -4,7 +4,7 @@
     text-decoration: none;
     &:hover {
       color: var(--secondary-color);
-      text-decoration: underline;
+      text-decoration: none;
     }
   }
   &-title {
